--- a/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
+++ b/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
@@ -131,6 +131,8 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="images\ic_eye.png" />
+    <Content Include="images\ic_eye_hide.png" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +156,7 @@
       <Name>EcoCareApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
