--- a/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
+++ b/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
@@ -101,8 +101,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_eye_hide.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\images\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
