--- a/EcoCareApp/EcoCareApp/EcoCareApp.csproj
+++ b/EcoCareApp/EcoCareApp/EcoCareApp.csproj
@@ -45,5 +45,8 @@
     <EmbeddedResource Update="Views\StartPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\TryAndMistake.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
