--- a/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
+++ b/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
@@ -150,6 +150,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.14</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2125" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
