--- a/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
+++ b/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
@@ -131,6 +131,10 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="images\chart.png" />
+    <Content Include="images\chart_bw.png" />
+    <Content Include="images\home.png" />
+    <Content Include="images\home_bw.png" />
     <Content Include="images\ic_eye.png" />
     <Content Include="images\ic_eye_hide.png" />
     <Content Include="images\calc_footprint.png" />
@@ -138,8 +142,12 @@
     <Content Include="images\logo.png" />
     <Content Include="images\log_in.jpg" />
     <Content Include="images\my_logo.png" />
+    <Content Include="images\shopping-cart.png" />
+    <Content Include="images\shopping_cart_bw.png" />
     <Content Include="images\sign_up.jpg" />
     <Content Include="images\start_page.jpg" />
+    <Content Include="images\user bw.png" />
+    <Content Include="images\user.png" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -160,7 +168,7 @@
       <Version>2.0.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
-      <Version>1.3.1</Version>
+      <Version>1.3.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
