--- a/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
+++ b/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
@@ -134,6 +134,7 @@
     <Content Include="images\bussiness_owner_register.jpg" />
     <Content Include="images\chart.png" />
     <Content Include="images\chart_bw.png" />
+    <Content Include="images\foot_print_calc.jpg" />
     <Content Include="images\home.png" />
     <Content Include="images\home_bw.png" />
     <Content Include="images\ic_eye.png" />
