--- a/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
+++ b/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
@@ -64,6 +64,21 @@
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>2.0.0.14</Version>
     </PackageReference>
+    <PackageReference Include="SkiaSharp">
+      <Version>2.80.3</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.Extended">
+      <Version>1.60.0</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Licensing">
+      <Version>19.4.0.48</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.Core">
+      <Version>19.4.0.48</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfListView">
+      <Version>19.4.0.48</Version>
+    </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.1</Version>
     </PackageReference>
