--- a/EcoCareApp/EcoCareApp/EcoCareApp.csproj
+++ b/EcoCareApp/EcoCareApp/EcoCareApp.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Microcharts.Forms" Version="0.9.5.9" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.14" />
+    <PackageReference Include="SkiaSharp" Version="2.80.3" />
+    <PackageReference Include="SkiaSharp.Extended" Version="1.60.0" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.48" />
+    <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.4.0.48" />
     <PackageReference Include="System.Text.Json" Version="6.0.1" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.2" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
