--- a/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
+++ b/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
@@ -85,6 +85,9 @@
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
       <Version>19.4.0.48</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu">
+      <Version>19.4.0.50</Version>
+    </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.1</Version>
     </PackageReference>
