--- a/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
+++ b/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
@@ -131,9 +131,13 @@
     <Content Include="Assets\Wide310x150Logo.scale-100.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="images\add.png" />
     <Content Include="images\bussiness_owner_register.jpg" />
     <Content Include="images\chart.png" />
     <Content Include="images\chart_bw.png" />
+    <Content Include="images\distance.png" />
+    <Content Include="images\electricity.png" />
+    <Content Include="images\meat.png" />
     <Content Include="images\profile.jpg" />
     <Content Include="images\home.png" />
     <Content Include="images\home_bw.png" />
