--- a/EcoCareApp/EcoCareApp/EcoCareApp.csproj
+++ b/EcoCareApp/EcoCareApp/EcoCareApp.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.50" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.50" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.4.0.50" />
+    <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="19.4.0.50" />
     <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu" Version="19.4.0.50" />
     <PackageReference Include="System.Text.Json" Version="6.0.2" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.0" />
