--- a/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
+++ b/EcoCareApp/EcoCareApp.UWP/EcoCareApp.UWP.csproj
@@ -154,6 +154,7 @@
     <Content Include="images\shopping_cart_bw.png" />
     <Content Include="images\sign_up.jpg" />
     <Content Include="images\start_page.jpg" />
+    <Content Include="images\static_plus.png" />
     <Content Include="images\user_bw.png" />
     <Content Include="images\user.png" />
     <Content Include="Properties\Default.rd.xml" />
@@ -173,7 +174,7 @@
       <Version>0.9.5.9</Version>
     </PackageReference>
     <PackageReference Include="Rg.Plugins.Popup">
-      <Version>2.0.0.14</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="SkiaSharp">
       <Version>2.80.3</Version>
@@ -188,29 +189,32 @@
       <Version>2.80.3</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
-      <Version>19.4.0.48</Version>
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
-      <Version>19.4.0.48</Version>
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
-      <Version>19.4.0.48</Version>
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout">
-      <Version>19.4.0.50</Version>
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu">
-      <Version>19.4.0.50</Version>
+      <Version>19.4.0.53</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfRangeSlider">
+      <Version>19.4.0.53</Version>
     </PackageReference>
     <PackageReference Include="WpfAnimatedGif">
       <Version>2.0.2</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
-      <Version>1.3.2</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.13" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EcoCareApp\EcoCareApp.csproj">
