--- a/EcoCareApp/EcoCareApp.iOS/EcoCareApp.iOS.csproj
+++ b/EcoCareApp/EcoCareApp.iOS/EcoCareApp.iOS.csproj
@@ -150,6 +150,9 @@
     <PackageReference Include="Syncfusion.Xamarin.Core">
       <Version>19.4.0.53</Version>
     </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfChart">
+      <Version>19.4.0.53</Version>
+    </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
       <Version>19.4.0.53</Version>
     </PackageReference>
