--- a/EcoCareApp/EcoCareApp/EcoCareApp.csproj
+++ b/EcoCareApp/EcoCareApp/EcoCareApp.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="SkiaSharp.Views.Forms" Version="2.80.3" />
     <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.53" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="19.4.0.53" />
+    <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="19.4.0.53" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="19.4.0.53" />
     <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout" Version="19.4.0.53" />
     <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu" Version="19.4.0.53" />
