--- a/EcoCareApp/EcoCareApp.iOS/EcoCareApp.iOS.csproj
+++ b/EcoCareApp/EcoCareApp.iOS/EcoCareApp.iOS.csproj
@@ -145,28 +145,34 @@
       <Version>2.80.3</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Licensing">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Buttons">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.Core">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfBadgeView">
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfChart">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Xamarin.SfComboBox">
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfListView">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfPopupLayout">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfRadialMenu">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Xamarin.SfRangeSlider">
-      <Version>19.4.0.54</Version>
+      <Version>19.4.0.55</Version>
     </PackageReference>
     <PackageReference Include="System.Text.Json">
       <Version>6.0.2</Version>
