--- a/EcoCareApp/EcoCareApp.iOS/EcoCareApp.iOS.csproj
+++ b/EcoCareApp/EcoCareApp.iOS/EcoCareApp.iOS.csproj
@@ -185,6 +185,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2337" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.1" />
+    <PackageReference Include="ZXing.Net.Mobile">
+      <Version>2.4.1</Version>
+    </PackageReference>
     <PackageReference Include="ZXing.Net.Mobile.Forms">
       <Version>2.4.1</Version>
     </PackageReference>
