--- a/EcoCareApp/EcoCareApp/EcoCareApp.csproj
+++ b/EcoCareApp/EcoCareApp/EcoCareApp.csproj
@@ -47,6 +47,9 @@
     <EmbeddedResource Update="Views\BarcodePopUp.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\CountriesPopUp.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\EditProduct.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
