--- a/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
+++ b/EcoCareApp/EcoCareApp.Android/EcoCareApp.Android.csproj
@@ -253,4 +253,9 @@
     <AndroidResource Include="Resources\drawable\add_product.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionEcoCareAppAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
